--- a/_posts/2020-9-21-csaw.md
+++ b/_posts/2020-9-21-csaw.md
@@ -3,8 +3,50 @@ layout: post
 title: CSAW
 ---
 
-Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
+##Perfect Secrecy
 
-![_config.yml]({{ site.baseurl }}/images/config.png)
 
-The easiest way to make your first post is to edit this one. Go into /_posts/ and update the Hello World markdown file. For more instructions head over to the [Jekyll Now repository](https://github.com/barryclark/jekyll-now) on GitHub.
+#Challenge Description: Alice sent over a couple of images with sensitive information to Bob, encrypted with a pre-shared key. It is the most secure encryption scheme, theoretically…
+
+image1
+![_config.yml]({{ site.baseurl }}/images/image1.png)
+
+
+image2
+![_config.yml]({{ site.baseurl }}/images/image2.png)
+
+The two images I’m given, remind me of a topic I learned in Serious Cryptography where the Linux penguin was encrypted using ECB. I know that ECB was not used to encrypt this image because the image is not still visible as the Linux penguin was. 
+
+
+![_config.yml]({{ site.baseurl }}/images/linux_penguin.jpg)
+
+
+The challenge description says that it was encrypted using the most secure encryption scheme, which is AES. To decrypt AES, I need the secret key. Not entirely sure as to how I’m going to find that. The way I’d solve this would be to translate the given images into text, then using an AES decryptor online to decrypt the images, and then translating them back into images. This is assuming I have the secret key. 
+
+
+After discussing the problem with others, I realized that the most theoretically secure encryption scheme is a one time pad. Now I just need the key, which I now know is as long as the plaintext itself. Still not sure how to get the key, though
+
+
+##difib
+#Challenge description: Welcome to crypto. We start with the classics! Deliver the decrypted form of the message to the guard on your journey.
+
+message
+![_config.yml]({{ site.baseurl }}/images/message.png)
+
+ramblings
+![_config.yml]({{ site.baseurl }}/images/ramblings.png)
+
+hints
+![_config.yml]({{ site.baseurl }}/images/hints.png)
+
+
+##modus operandi
+#Challenge description: Can't play CSAW without your favorite block cipher!
+
+When I run the netcat command, I’m asked to input a plaintext, the corresponding ciphertext is outputted. I’m then prompted to determine whether ECB or CBC mode was used to encrypt the plaintext. ECB and CBC mode are used with AES encryption. So I’m assuming the cipher used is AES.
+
+
+The hint given for this challenge is: “<200”. This could represent the key size or the block size.
+
+
+Assuming that the cipher is using one mode of operation consistently with each prompt, I’m thinking the best way to solve this is to continually input plaintext and keep track of the ciphertext returned. I think this would potentially be the best way to solve it because ECB is known as an inferior mode of operation because of its lack of diffusion (i.e. the Linux penguin encryption example). 
