fixed markdown in csaw writeup

--- a/_posts/2020-9-21-csaw.md
+++ b/_posts/2020-9-21-csaw.md
@@ -3,10 +3,10 @@ layout: post
 title: CSAW
 ---
 
-##Perfect Secrecy
+# Perfect Secrecy
 
 
-#Challenge Description: Alice sent over a couple of images with sensitive information to Bob, encrypted with a pre-shared key. It is the most secure encryption scheme, theoretically…
+## Challenge Description: Alice sent over a couple of images with sensitive information to Bob, encrypted with a pre-shared key. It is the most secure encryption scheme, theoretically…
 
 image1
 ![_config.yml]({{ site.baseurl }}/images/image1.png)
@@ -27,8 +27,8 @@ The challenge description says that it was encrypted using the most secure encry
 After discussing the problem with others, I realized that the most theoretically secure encryption scheme is a one time pad. Now I just need the key, which I now know is as long as the plaintext itself. Still not sure how to get the key, though
 
 
-##difib
-#Challenge description: Welcome to crypto. We start with the classics! Deliver the decrypted form of the message to the guard on your journey.
+# difib
+## Challenge description: Welcome to crypto. We start with the classics! Deliver the decrypted form of the message to the guard on your journey.
 
 message
 ![_config.yml]({{ site.baseurl }}/images/message.png)
@@ -40,8 +40,8 @@ hints
 ![_config.yml]({{ site.baseurl }}/images/hints.png)
 
 
-##modus operandi
-#Challenge description: Can't play CSAW without your favorite block cipher!
+# modus operandi
+## Challenge description: Can't play CSAW without your favorite block cipher!
 
 When I run the netcat command, I’m asked to input a plaintext, the corresponding ciphertext is outputted. I’m then prompted to determine whether ECB or CBC mode was used to encrypt the plaintext. ECB and CBC mode are used with AES encryption. So I’m assuming the cipher used is AES.
 
