updated perfect secrecy challenge in CSAW writeup

--- a/_posts/2020-9-21-csaw.md
+++ b/_posts/2020-9-21-csaw.md
@@ -28,7 +28,13 @@ The two images I’m given, remind me of a topic I learned in Serious Cryptograp
 The challenge description says that it was encrypted using the most secure encryption scheme, which is AES. To decrypt AES, I need the secret key. Not entirely sure as to how I’m going to find that. The way I’d solve this would be to translate the given images into text, then using an AES decryptor online to decrypt the images, and then translating them back into images. This is assuming I have the secret key. 
 
 
-After discussing the problem with others, I realized that the most theoretically secure encryption scheme is a one time pad. Now I just need the key, which I now know is as long as the plaintext itself. Still not sure how to get the key, though
+After discussing the problem with others, I realized that the most theoretically secure encryption scheme is a one time pad. Now I just need the key, which I now know is as long as the plaintext itself. Still not sure how to get the key, though.
+
+**Update**
+So since the most theoretically secure encryption scheme is the one time pad, I don't need to know the key beforehand since the key was probably used to encrypt both images. The way the one time pad works is by xor-ing the message with the key, but if the same key was used for both messages, I can xor the messages together and leak the key.
+
+The python script below xors the two images together using the PIL library and returns the new image (key):
+![_config.yml]({{ site.baseurl }}/images/result.png)
 
 
 ### difib
