--- a/_posts/2020-9-21-csaw.md
+++ b/_posts/2020-9-21-csaw.md
@@ -6,7 +6,10 @@ title: CSAW
 ### Perfect Secrecy
 
 
-**Challenge Description:** Alice sent over a couple of images with sensitive information to Bob, encrypted with a pre-shared key. It is the most secure encryption scheme, theoretically…
+**Challenge Description:** 
+
+
+>Alice sent over a couple of images with sensitive information to Bob, encrypted with a pre-shared key. It is the most secure encryption scheme, theoretically…
 
 image1:
 
@@ -31,6 +34,8 @@ The challenge description says that it was encrypted using the most secure encry
 After discussing the problem with others, I realized that the most theoretically secure encryption scheme is a one time pad. Now I just need the key, which I now know is as long as the plaintext itself. Still not sure how to get the key, though.
 
 **Update**
+
+
 So since the most theoretically secure encryption scheme is the one time pad, I don't need to know the key beforehand since the key was probably used to encrypt both images. The way the one time pad works is by xor-ing the message with the key, but if the same key was used for both messages, I can xor the messages together and leak the key.
 
 The python script below xors the two images together using the PIL library and returns the new image (key):
@@ -38,7 +43,9 @@ The python script below xors the two images together using the PIL library and r
 
 
 ### difib
-**Challenge Description:** Welcome to crypto. We start with the classics! Deliver the decrypted form of the message to the guard on your journey.
+**Challenge Description:** 
+
+>Welcome to crypto. We start with the classics! Deliver the decrypted form of the message to the guard on your journey.
 
 message:
 
@@ -55,7 +62,17 @@ hints:
 
 ![_config.yml]({{ site.baseurl }}/images/hints.png)
 
+**Update**
 
+
+The challenge's title tells us that this is a bifid cipher. According to Wikipedia, "the bifid cipher is a cipher which combines the Polybius square with transposition, and uses fractionation to achieve diffusion".
+
+Connecting to the server using the netcat command gives us this ciphertext to decrypt: snbwmuotwodwvcywfgmruotoozaiwghlabvuzmfobhtywftopmtawyhifqgtsiowetrksrzgrztkfctxnrswnhxshylyehtatssukfvsnztyzlopsv
+
+
+To use a bifid cipher, we need to have a key that is a perfect panagram (sentence that uses each letter of the alphabet once) of 25 characters. In the encrypted message, 'j', is not used, so we need to take out every 'j' that appears in ramblings.txt, and every character that is non-alphabetic.
+
+CTF Writeup: [Kooli CSAW Crypto] (https://a-kooli.me/post/csaw-ctf-2020-quals-crypto/#difib)
 ### modus operandi
 **Challenge Description:** Can't play CSAW without your favorite block cipher!
 
