--- a/_posts/2020-11-27-hitcon.md
+++ b/_posts/2020-11-27-hitcon.md
@@ -16,7 +16,7 @@ title: Hitcon
 
 
 '''
-#!/usr/bin/env node
+!/usr/bin/env node
 
 const rl = require("readline").createInterface({
   input: process.stdin,
